Fix long item description being cut off in tax-tip page.

--- a/src/pages/pay/tax-tip/tax-tip.scss
+++ b/src/pages/pay/tax-tip/tax-tip.scss
@@ -39,8 +39,11 @@ page-tax-tip {
     color: map-get($colors, primary);
   }
 
-  .line-details {
-    color: gray;
+  .line {
+    white-space: normal;
+    &-details {
+      color: gray;
+    }
   }
 }
 
